@@ -5,7 +5,11 @@
 // 	- Details.
 //========================================
 
-01/08/2011
+01/08/2010
+	r97 [pakpil]
+	* Minor fix in my last commit. Sorry.
+
+01/08/2010
 	r96 [pakpil]
 	* Added skill SC_AUTOSHADOWSPELL.
 
@@ -15,7 +19,7 @@
 	* Minor fix in RK_GIANTGROWTH.
 	* Added two packets: 
 	- clif_addskill to add a skill to the skill info window
-	- clif_skillinfo_delete to remove a skill frome the skill info window.
+	- clif_skillinfo_delete to remove a skill from the skill info window.
 
 01/08/2010
 	r94 [pakpil]
